syntax = "proto3";

package study;

option java_package = "com.kushagra.studyo.grpc";
option java_outer_classname = "StudyProto";
option java_multiple_files = true; // <--- ADD THIS LINE (Crucial!)

service StudyService {

  rpc JoinSession (User) returns (SessionToken);
  rpc StreamSessionUpdates (SessionToken) returns (stream SessionEvent);
  rpc SendAction (SessionAction) returns (Empty);

  rpc SaveNote (NoteRequest) returns (Empty);
  rpc GetMyNotes (SessionToken) returns (NoteResponse);
}

// -- Messages --

message User {
  string name = 1;
  string avatar_url = 2;
  string desired_session_id = 3; 
}

message SessionToken {
  string session_id = 1;
  string user_id = 2;
}

message SessionAction {
  string session_id = 1;
  string user_id = 2;
  oneof action {
    string chat_message = 3;
    int32 page_number = 4;
    string document_url = 5; // <--- ADD THIS
  }
}

message SessionEvent {
  string user_id = 1;
  string user_name = 2;
  int64 timestamp = 3;
  oneof event {
    string chat_message = 4;
    int32 page_number = 5;
    string user_joined = 6;
    string document_url = 7; 
  }
}

message NoteRequest {
  string session_id = 1;
  string user_id = 2;
  string content = 3;
}

message NoteResponse {
  string content = 1;
}

message Empty {}